<resources>
    <string name="app_name">聖地コンパス</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="compass_fragment_label">Compass Fragment</string>
    <string name="seichi_complete_fragment_label">Seichi Complete Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="compass_image_alt" translatable="false">Compass</string>
    <string name="label_to_seichi">聖地まで</string>
    <string name="seichi_distance" translatable="false">%1$s m</string>

    <string name="label_description">聖地の説明</string>
    <string name="label_info_source">参考URL等</string>

    <!-- Strings used for fragments for navigation -->
    <string name="category_select_fragment_label">Category Select Fragment</string>
    <string name="seichi_select_fragment_label">Seichi Select Fragment</string>
    <string name="force_complete">聖地を発見！</string>
    <string name="rationale_location">アプリを使うには位置情報を許可する必要があります</string>
    <string name="unable_to_activate_app">位置情報がないとアプリを実行できません</string>
    <string name="label_register_seichi">聖地を登録</string>
    <string name="label_input_title">聖地のタイトルを入力</string>
    <string name="label_input_description">聖地の説明を入力</string>
    <string name="label_input_info_source">参考URLなどを入力</string>
    <string name="label_input_coordinate">選択された地点のURL</string>
    <string name="label_button_register_seichi">聖地を登録</string>
    <string name="alert_invalid_coordinate_url">選択されたURLは無効なURLです</string>
    <string name="hint_input_title">タイトル</string>
    <string name="hint_input_description">聖地の説明</string>
    <string name="hint_input_info_source">例: https://youtu.be/...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_button_open_map">Mapアプリを開く</string>
</resources>