<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CompassFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/seichiCompass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/compass_image_alt"
                android:scaleX="0.5"
                android:scaleY="0.8"
                android:src="@mipmap/compass"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/forceCompleteButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seichiCompass">

                <TextView
                    android:id="@+id/toSeichiLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_to_seichi"
                    android:textAlignment="center"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/seichiDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seichi_distance"
                    android:textAlignment="center"
                    android:textSize="34sp" />
            </LinearLayout>

            <Button
                android:id="@+id/forceCompleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/force_complete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/compassLoading"
            layout="@layout/loading_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>